@@ -1,5 +1,6 @@
 Release 1.0.6 (future)
 
+- Issue 207: Convert dicts into structured properties automatically.
 - Issue 209: Save/restore datastore connection around tasklet switches.
 - Issue 210: Fix fetch() with offset > 1000.
 - Improve error message when calling Model() with positional argument(s).
